exports[`test allows to style component 1`] = `
<div
  className="Box-2194538609"
  style={
    Object {
      "alignContent": undefined,
      "alignItems": undefined,
      "alignSelf": undefined,
      "bottom": undefined,
      "flexBasis": undefined,
      "flexDirection": undefined,
      "flexFlow": undefined,
      "flexGrow": undefined,
      "flexShrink": undefined,
      "flexWrap": undefined,
      "height": undefined,
      "justifyContent": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "order": undefined,
      "overflow": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "position": undefined,
      "right": undefined,
      "top": undefined,
      "width": undefined
    }
  } />
`;

exports[`test allows to style component 2`] = `undefined`;

exports[`test allows to style component w/ style prop 1`] = `
<div
  className="HBox-149018307"
  style={
    Object {
      "alignContent": undefined,
      "alignItems": undefined,
      "alignSelf": undefined,
      "bottom": undefined,
      "flexBasis": undefined,
      "flexDirection": undefined,
      "flexFlow": undefined,
      "flexGrow": undefined,
      "flexShrink": undefined,
      "flexWrap": undefined,
      "height": undefined,
      "justifyContent": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "order": undefined,
      "overflow": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "position": undefined,
      "right": undefined,
      "textAlign": "center",
      "top": undefined,
      "width": undefined
    }
  } />
`;

exports[`test render <HBox /> 1`] = `
<div
  className="HBox-149018307"
  style={
    Object {
      "alignContent": undefined,
      "alignItems": undefined,
      "alignSelf": undefined,
      "bottom": undefined,
      "flexBasis": undefined,
      "flexDirection": undefined,
      "flexFlow": undefined,
      "flexGrow": undefined,
      "flexShrink": undefined,
      "flexWrap": undefined,
      "height": undefined,
      "justifyContent": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "order": undefined,
      "overflow": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "position": undefined,
      "right": undefined,
      "top": undefined,
      "width": undefined
    }
  } />
`;

exports[`test render <HBox /> 2`] = `undefined`;

exports[`test render <VBox /> 1`] = `
<div
  className="VBox-4283335748"
  style={
    Object {
      "alignContent": undefined,
      "alignItems": undefined,
      "alignSelf": undefined,
      "bottom": undefined,
      "flexBasis": undefined,
      "flexDirection": undefined,
      "flexFlow": undefined,
      "flexGrow": undefined,
      "flexShrink": undefined,
      "flexWrap": undefined,
      "height": undefined,
      "justifyContent": undefined,
      "left": undefined,
      "marginBottom": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginTop": undefined,
      "maxHeight": undefined,
      "maxWidth": undefined,
      "minHeight": undefined,
      "minWidth": undefined,
      "order": undefined,
      "overflow": undefined,
      "paddingBottom": undefined,
      "paddingLeft": undefined,
      "paddingRight": undefined,
      "paddingTop": undefined,
      "position": undefined,
      "right": undefined,
      "top": undefined,
      "width": undefined
    }
  } />
`;

exports[`test render <VBox /> 2`] = `undefined`;
